--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1,12 +1,72 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sean Bittner at 2021-01-11 13:40:07 -0500 
+%% Created for Sean Bittner at 2021-02-02 15:37:36 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{o2014cell,
+	author = {O'Leary, Timothy and Williams, Alex H and Franci, Alessio and Marder, Eve},
+	date-added = {2021-02-02 15:37:30 -0500},
+	date-modified = {2021-02-02 15:37:30 -0500},
+	journal = {Neuron},
+	number = {4},
+	pages = {809--821},
+	publisher = {Elsevier},
+	title = {Cell types, network homeostasis, and pathological compensation from a biologically plausible ion channel expression model},
+	volume = {82},
+	year = {2014}}
+
+@article{gutenkunst2007universally,
+	author = {Gutenkunst, Ryan N and Waterfall, Joshua J and Casey, Fergal P and Brown, Kevin S and Myers, Christopher R and Sethna, James P},
+	date-added = {2021-02-02 15:37:01 -0500},
+	date-modified = {2021-02-02 15:37:01 -0500},
+	journal = {PLoS Comput Biol},
+	number = {10},
+	pages = {e189},
+	publisher = {Public Library of Science},
+	title = {Universally sloppy parameter sensitivities in systems biology models},
+	volume = {3},
+	year = {2007}}
+
+@article{wang2010neurophysiological,
+	author = {Wang, Xiao-Jing},
+	date-added = {2021-02-02 15:34:52 -0500},
+	date-modified = {2021-02-02 15:34:52 -0500},
+	journal = {Physiological reviews},
+	number = {3},
+	pages = {1195--1268},
+	publisher = {American Physiological Society Bethesda, MD},
+	title = {Neurophysiological and computational principles of cortical rhythms in cognition},
+	volume = {90},
+	year = {2010}}
+
+@article{marder1998biophysics,
+	author = {Marder, Eve},
+	date-added = {2021-02-02 15:34:37 -0500},
+	date-modified = {2021-02-02 15:34:37 -0500},
+	journal = {Annual review of neuroscience},
+	number = {1},
+	pages = {25--45},
+	publisher = {Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA},
+	title = {From biophysics to models of network function},
+	volume = {21},
+	year = {1998}}
+
+@article{kopell1988coupled,
+	author = {Kopell, Nancy and Ermentrout, G Bard},
+	date-added = {2021-02-02 15:34:26 -0500},
+	date-modified = {2021-02-02 15:34:26 -0500},
+	journal = {Mathematical biosciences},
+	number = {1-2},
+	pages = {87--109},
+	publisher = {Elsevier},
+	title = {Coupled oscillators and the design of central pattern generators},
+	volume = {90},
+	year = {1988}}
 
 @inproceedings{kingma2018glow,
 	author = {Kingma, Durk P and Dhariwal, Prafulla},
